# calories_ai

./: .gitignore  2025-06-17.json  main.py  pyproject.toml
api/api/: routes.py
app/client/: api_client.py
app/database/: sql.py
app/services/: macros.py
app/storage/: file_manager.py
app/webgui/: gui.py
app/webgui/static/: styles.css
app/webgui/templates/: index.html
days/: 2025-06-18.json
macros_api/: api.py
src/: api.py  file.py  macros.py
tests/: test_get_macros.py
