[project]
name = "calories"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.13",
    "openai>=1.88.0",
    "pytest>=8.4.0",
    "pywebview>=5.4",
    "requests>=2.32.4",
]
